# research-feed

./: .env.example  .gitignore  README.md  pyproject.toml
evals/: README.md  _common.py  arxiv.py  dedup.py  forum.py  forum_health.py  match.py  pipeline_trace.py  run.py  sources.py  sources_health.py
evals/fixtures/: arya_input.json  arya_oracle.json  arya_profile.json  david_input.json  david_oracle.json  david_profile.json  mara_input.json  mara_oracle.json  priya_input.json  priya_oracle.json  priya_profile.json  profile_control.json  profile_mech_interp.json
evals/runs/full/: RESULTS.md
research_feed/: app.py  briefing.py  config.py  digest.py  models.py  store.py
research_feed/agents/: __init__.py  arxiv.py  curator.py  forum.py  onboarding.py  registrar.py  runner.py  sources.py
research_feed/fetch/: __init__.py  lesswrong.py  openalex.py
research_feed/prompts/: arxiv.py  curator.py  forum.py  onboarding.py  registrar.py  sources.py
src/: agents.py  app.py  config.py  llm.py  models.py  pipeline.py  progress.py  prompts.py  scoring.py  sources.py  store.py
static/: style.css
templates/: _card.html  _item_card.html  base.html  feed.html  item.html  month.html  profile.html  running.html  week.html  weeks.html
web/: index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
web/src/: App.tsx  api.ts  styles.css  useFetch.ts  util.ts
web/src/components/: Catchup.tsx  Chips.tsx  EntityList.tsx  ItemCard.tsx  SampleLoader.tsx  Stepper.tsx
web/src/pages/: Briefing.tsx  DigestView.tsx  Feed.tsx  Onboarding.tsx  Profile.tsx  (+3 more)
(+13 files in other folders)
