[project]
name = "research-feed"
version = "0.1.0"
description = "Research-discovery prototype for AI safety researchers"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.111",
    "uvicorn[standard]>=0.30",
    "httpx>=0.27",
    "rapidfuzz>=3.9",
    "claude-agent-sdk>=0.2.82",
    "anthropic>=0.40",
]

[tool.uv]
package = false
